--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.main{
+    height: 400px;
+    padding: 50px;
+    background-color : #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.first, .second{
+    height: 35px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.spara{
+    display: flex;
+    justify-content: end;
+}
